@@ -3,6 +3,7 @@
 * Fix bug with insertions into stdio inside bootstrap blocks
 * Improve error message when <~ applied to a collection type that doesn't
   support it (#316)
+* Fix rescan logic for Zookeeper-backed collections (#317)
 
 == 0.9.7 / 2013-04-22
 
